--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <div id="cellsContainer"></div>
 
             <div class="add-buttons">
-                <button class="add-btn" id="addTextBtn">➕ افزودن متن</button>
-                <button class="add-btn" id="addCodeBtn">➕ افزودن کد</button>
+                <button class="add-btn" id="addTextBtn">📝 افزودن متن</button>
+                <button class="add-btn" id="addCodeBtn">💻 افزودن کد</button>
+                <button class="add-btn" id="addImageBtn">🖼️ افزودن عکس</button>
             </div>
 
             <div class="action-buttons">
@@ -37,6 +38,10 @@
         </div>
     </div>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="script.js"></script>
 </body>
