--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
             <div id="cellsContainer"></div>
 
             <div class="add-buttons">
-                <button class="add-btn" id="addTextBtn">📝 افزودن متن</button>
-                <button class="add-btn" id="addCodeBtn">💻 افزودن کد</button>
-                <button class="add-btn" id="addImageBtn">🖼️ افزودن عکس</button>
+                <button class="add-btn" id="addTextBtn">➕ افزودن متن</button>
+                <button class="add-btn" id="addCodeBtn">➕ افزودن کد</button>
             </div>
 
             <div class="action-buttons">
